--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -14,6 +14,6 @@ Have a
 
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Good</a>
 
-    <code> day </code>?
+    <code> day </code> :)
 
       <a href = "w1.html">--></a>  
