--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -10,6 +10,11 @@
 <h3>Quotes on Code</h3>
 
 <blockquote>
+  "I have an attention span that's as long as it has to be." 
+  &mdash; <a href = " http://www.brainyquote.com/quotes/authors/d/donald_trump.html">Donald Trump</a>
+</blockquote>
+
+<blockquote>
   "The programmer, like the poet, works only slightly removed from
   pure thought-stuff. He builds his castles in the air, from air,
   creating by exertion of the imagination."
