--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -11,7 +11,7 @@
 
 <blockquote>
   "I have an attention span that's as long as it has to be." 
-  &mdash; <a href = " http://www.brainyquote.com/quotes/authors/d/donald_trump.html">Donald Trump</a>
+  &mdash; <a href = " http://www.brainyquote.com/quotes/authors/d/donald_trump.html">Donald "Drumpf" Trump</a>
 </blockquote>
 
 <blockquote>
