--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -7,12 +7,14 @@
 
 <h1>Is <a href = "view-source:http://bardcollege.github.io/workshop1/w1.html">Code</a> <code>Language</code>?</h1>
 
-<h3>Quotes on Code</h3>
+<h3>Election Quotes </h3>
 
 <blockquote>
   "I have an attention span that's as long as it has to be." 
   &mdash; <a href = " http://www.brainyquote.com/quotes/authors/d/donald_trump.html">Donald "Drumpf" Trump</a>
 </blockquote>
+
+<h3>Quotes on Code</h3>
 
 <blockquote>
   "The programmer, like the poet, works only slightly removed from
