--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -11,12 +11,18 @@
 <html>
 
   <head>
-    <title>Bard College Language and Thinking</title>
+    <title> ॐ Peaceful Language and Thinking</title>
   </head>
 
   <body>
 
     <h1>Is <a href = "view-source:http://bardcollege.github.io/workshop1/w2.html">Code</a> <code>Language</code>?</h1>
+
+<h3>Blogs</h3>
+
+<ul>
+     <li> Tumblr (e.g., <a href = http://cakeinbedchaos.tumblr.com/> a> </li>
+</ul>
 
     <h3>DECODING CODE: What do we mean by code?</h3>
 
