--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -21,7 +21,7 @@
 <h3>Blogs</h3>
 
 <ul>
-     <li> Tumblr (e.g., <a href = http://cakeinbedchaos.tumblr.com/> a> </li>
+     <li> Tumblr (e.g., <a href = http://cakeinbedchaos.tumblr.com/>CakeinBedChaos</a>)</li>
 </ul>
 
     <h3>DECODING CODE: What do we mean by code?</h3>
