--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -6,6 +6,11 @@
 -->
 
 <h1>Election Stuff </h1>
+<h3>Live Feed</h3>
+
+<ul>
+     <li> Electoral Vote (e.g., <a href = http://www.electoral-vote.com/>Electoral Vote</a>)</li>
+
 
 <h3>Donald Trump </h3>
 
